--- a/recipe.yml
+++ b/recipe.yml
@@ -1,5 +1,5 @@
-name: Custom Vanilla Desktop # Replace this name with your image name
-id: custom # Replace this ID with your image ID
+name: VanillaOS for Surface Book # Replace this name with your image name
+id: vanillaos-surface-book # Replace this ID with your image ID
 stages:
 - id: build
   base: ghcr.io/vanilla-os/desktop:main # Optionally, Replace this image URL with a different one i.e. nvidia:main, etc
@@ -23,23 +23,32 @@ stages:
 
   # Put your custom actions below this comment
 
-  - name: example-packages # Sample module using the built-in Apt module to install packages
-    type: apt
-    source:
-      packages:
-      - vim
+- name: add-kernel-repo
+  type: shell
+  commands:
+  #- dpkg --add-architecture i386
+  - wget -qO - https://raw.githubusercontent.com/linux-surface/linux-surface/master/pkg/keys/surface.asc | gpg --dearmor | dd of=/etc/apt/trusted.gpg.d/linux-surface.gpg
+  - echo "deb [arch=amd64] https://pkg.surfacelinux.com/debian release main" | tee /etc/apt/sources.list.d/linux-surface.list
+  #- mkdir -pm755 /etc/apt/keyrings
+  #- wget -O - https://dl.winehq.org/wine-builds/winehq.key | sudo gpg --dearmor -o /etc/apt/keyrings/winehq-archive.key -
+  #- apt-get update
 
-  - name: example-commands # Sample module demonstrating the Shell module with custom commands
-    type: shell
-    commands:
-    - echo Example output
+- name: add-kernel-packages
+  type: apt
+  source:
+    packages:
+    - linux-image-surface
+    - linux-headers-surface
+    - libwacom-surface
+    - iptsd
 
-  - name: example-modules # Sample module demonstrating importing local and remote modules
-    type: includes
-    includes:
-      - modules/50-install-debs.yml # Sample local module present in this repository
-      # - gh:vanilla-os/dev-image:main:modules/00-basics.yml # Sample GitHub remote module in the format: `gh:your-name/your-repo:branch:modules/file.yml`
-      # - https://raw.githubusercontent.com/Vanilla-OS/dev-image/main/modules/05-go.yml # Sample full URL remote module
+- name: add-qol-packages
+  type: apt
+  source:
+    packages:
+    - gnome-tweaks
+    #- winehq-stable
+    - vim
 
   # Put your custom actions above this comment
 
